feat: refactored the CRUD operations
