# app/controllers/employee.js
@@ -5,18 +5,18 @@
  * @author       Mohit Shah <mohitshah7777@gmail.com>
  * @since        15/06/2021  
 -----------------------------------------------------------------------------------------------*/
-const service = require('../services/service');
-const validateSchema = require('../middleware/validation');
+const service = require('../services/employee');
+const validateEmployeeSchema = require('../middleware/employeeValidation');
 
-class EmployeeController{
+class CreateEmployeeController{
     /**
      * @description Create and save employee and sending response to service
      * @method register to save the employee
      * @param req,res for service
      */
-    register = (req, res) => {
+    createEmployee = (req, res) => {
         // Validate request
-        const validation = validateSchema.validate(req.body)
+        const validation = validateEmployeeSchema.validate(req.body)
         if(validation.error){
             res.status(400).send({message: validation.error.details[0].message})
         }
@@ -26,13 +26,15 @@ class EmployeeController{
             firstName: req.body.firstName,
             lastName: req.body.lastName,
             email: req.body.email,
+            department: req.body.department,
+            salary: req.body.salary,
             password: req.body.password,
             confirmPassword: req.body.confirmPassword
         }
 
         const empdata ={}
         
-        service.createDetails(employee, (error,data) => {
+        service.createEmployee(employee, (error,data) => {
             if(error){
                 return res.status(400)
                 .send({success:false, message: "Email already exists", data: null})
@@ -40,26 +42,6 @@ class EmployeeController{
             else{
                 return res.status(200)
                 .send({success: true, message: "Employee has been successfully registered", data: empdata.data = data})
-            }
-        })
-    }
-
-    /**
-     * @description retrieving login info from user by email and password
-     * @method login
-     * @param req,res for service
-     */
-    login = (req, res) => {
-        const loginData = {
-            email: req.body.email,
-            password : req.body.password
-        }
-        service.loginDetails(loginData, (error, token) => {
-            if(error){
-                return res.status(400).send({success: false, message: error, token: null})
-            }
-            else{
-                return res.status(200).send({success: true, message: "Successfully Logged In", token: token})
             }
         })
     }
@@ -101,7 +83,7 @@ class EmployeeController{
      * @param req,res for service
     */
     update = (req, res) => {
-        const validation = validateSchema.validate(req.body)
+        const validation = validateEmployeeSchema.validate(req.body)
         if(validation.error){
             res.status(400).send({message: validation.error.details[0].message})
         }
@@ -111,6 +93,8 @@ class EmployeeController{
             firstName: req.body.firstName,
             lastName: req.body.lastName,
             email: req.body.email,
+            department: req.body.department,
+            salary: req.body.salary,
             password: req.body.password,
             confirmPassword: req.body.password
         } 
@@ -143,4 +127,4 @@ class EmployeeController{
     }
 }
 
-module.exports = new EmployeeController();
+module.exports = new CreateEmployeeController();
