# app/middleware/employeeValidation.js
@@ -1,12 +1,14 @@
-const Joi = require('joi')
+const Joi = require('joi');
 
 // joi validation
-const validateSchema = Joi.object({
+const validateEmployeeSchema = Joi.object({
     firstName: Joi.string().min(2).max(15).pattern(new RegExp('^[a-zA-Z]{2,}')).required(),
     lastName: Joi.string().min(2).max(15).pattern(new RegExp('^[a-zA-Z]{2,}')).required(),
     email: Joi.string().email().pattern(new RegExp("^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$")).required(),
+    department: Joi.string().required(),
+    salary: Joi.string().required(),
     password: Joi.string().min(8).max(20).pattern(new RegExp("^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{7,15}$")).required(),
     confirmPassword: Joi.string().valid(Joi.ref('password')).required()
-}) 
+}); 
 
-module.exports = validateSchema;
+module.exports = validateEmployeeSchema;
