# app/models/user.js
@@ -79,72 +79,6 @@ class EmployeeModel {
             return callBack(null, data);
         })
     }
-
-    /**
-     * @description find all users from the database
-     * @param findAll 
-     * @param callback for service
-     */
-    findAll = (callBack) => {
-        Register.find({}, (error, data) => {
-            if(error){
-                return callBack(error, null)
-            }else{
-                return callBack(null, data)
-            }
-        })
-    }  
-
-    /**
-     * @description find user by id from the database
-     * @param findOne
-     * @param callback for service
-     */
-    findOne = (employee, callBack) => {
-        Register.findById({'_id': employee._id}, (error, data) => {
-            if(error){
-                return callBack(error, null)
-            }else {
-                 return callBack(null, data)
-            }
-        })
-    }
-
-    /**
-     * @description find user by id and update in the database
-     * @param updateById
-     * @param callback for service
-     */
-    updateById = (_id, employee, callBack) => {
-        Register.findByIdAndUpdate({'_id': employee._id}, {
-            firstName: employee.firstName,
-            lastName: employee.lastName,
-            email: employee.email,
-            password: employee.password,
-            confirmPassword: employee.confirmPassword
-        }, (error, data) => {
-            if(error){
-                return callBack(error, null)
-            }else {
-                return callBack(null, data)
-            }
-        })
-    }
-
-    /**
-     * @description find user by id and delete in the database
-     * @param deleteById
-     * @param callback for service
-     */
-    deleteById = (employee, callBack) => {
-        Register.findByIdAndRemove(employee._id, (error, data) => {
-            if(error){
-                return callBack(error, null)
-            }else{
-                return callBack(null, data)
-            }   
-        })
-    }
 }
 
 module.exports = new EmployeeModel();
