# app/swagger/swagger.json
@@ -105,6 +105,46 @@
         ]
       }
     },
+    "/create": {
+      "post": {
+        "tags": [
+          "Users"
+        ],
+        "description": "Create new user in system",
+        "parameters": [
+          {
+            "name": "createEmp",
+            "in": "body",
+            "description": "User that we want to create",
+            "schema": {
+              "$ref": "#/definitions/create"
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "schema": {
+          "$ref": "#/definitions/create"
+        },
+        "responses": {
+          "200": {
+            "description": "New user is created"
+          },
+          
+          "400": {
+            "description": "Bad Request"
+          },
+          
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security":[{
+          "JWT" :[]
+        }]
+      }
+    },
     "/read": {
       "get": {
         "tags": ["Users"],
@@ -194,7 +234,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/register"
+              "$ref": "#/definitions/update"
             }
           }
         ],
@@ -292,7 +332,61 @@
         "type": "string"
         }
       }
-    } 
+    },
+    "create": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "department":{
+          "type": "string"
+        },
+        "salary": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "confirmPassword": {
+          "type": "string"
+        }
+      }
+    },
+     
+    "update": {
+      "type": "object",
+      "properties": {
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "department":{
+          "type": "string"
+        },
+        "salary": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        },
+        "confirmPassword": {
+          "type": "string"
+        }
+      }
+    }
+     
   },
   "securityDefinitions" : {
     "JWT" : {
